# Relay

./: Makefile  README.md  debug_ai_response.py  debug_mouse.py  debug_spotify.py  install.sh  main.py  pyproject.toml  test_correct_spotify.py  test_relay_spotify.py
examples/: __init__.py  basic_usage.py
relay/: __init__.py  config.py
relay/core/: __init__.py  automation_engine.py  task_controller.py  vision_engine.py
relay/ui/: __init__.py  main_window.py
tests/: __init__.py  test_vision_engine.py
